# ChangeLog for net-ftp/lftp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.250 2009/12/22 02:20:23 jer Exp $

*lftp-4.0.5 (22 Dec 2009)

  22 Dec 2009; Jeroen Roovers <jer@gentoo.org> +lftp-4.0.5.ebuild:
  Version bump.

  08 Dec 2009; Brent Baude <ranger@gentoo.org> lftp-4.0.3.ebuild:
  Marking lftp-4.0.3 ppc64 for bug 293737

*lftp-4.0.4 (30 Nov 2009)

  30 Nov 2009; Jeroen Roovers <jer@gentoo.org> +lftp-4.0.4.ebuild:
  Version bump.

  28 Nov 2009; Tiago Cunha <tcunha@gentoo.org> lftp-4.0.3.ebuild:
  stable sparc, bug 293737

  23 Nov 2009; Jeroen Roovers <jer@gentoo.org> lftp-4.0.3.ebuild:
  Stable for HPPA (bug #293737).

  23 Nov 2009; Markus Meier <maekke@gentoo.org> lftp-4.0.3.ebuild:
  amd64/arm/x86 stable, bug #293737

  21 Nov 2009; nixnut <nixnut@gentoo.org> lftp-4.0.3.ebuild:
  ppc stable #293737

  21 Nov 2009; Jeroen Roovers <jer@gentoo.org> lftp-4.0.3.ebuild,
  -files/lftp-4.0.3+autoconf-2.64.patch,
  +files/lftp-4.0.3-autoconf-2.64.patch:
  Filename fix.

  21 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org> lftp-4.0.3.ebuild,
  +files/lftp-4.0.3+autoconf-2.64.patch:
  Add patch to fix autoconf 2.64 regeneration, by Rafał Mużyło in bug
  #293958.

  19 Nov 2009; Jeroen Roovers <jer@gentoo.org>
  -files/lftp-3.99.5-torrent_la.patch:
  Remove unused patch.

  19 Nov 2009; Jeroen Roovers <jer@gentoo.org> -lftp-4.0.1.ebuild,
  -lftp-4.0.2.ebuild, -lftp-4.0.2.91.ebuild, -lftp-4.0.2.91-r1.ebuild:
  Remove old.

*lftp-4.0.3 (20 Oct 2009)

  20 Oct 2009; Jeroen Roovers <jer@gentoo.org> +lftp-4.0.3.ebuild:
  Version bump. Carry over lafiles patch.

  13 Oct 2009; Jeroen Roovers <jer@gentoo.org> -lftp-3.7.14.ebuild:
  Remove old.

  13 Oct 2009; Raúl Porcel <armin76@gentoo.org> lftp-3.7.15-r1.ebuild:
  ia64/s390/sparc stable wrt #279426

*lftp-4.0.2.91-r1 (13 Oct 2009)
