@@ -6,8 +6,8 @@ DIST lftp-4.0.3.tar.bz2 1596904 RMD160 f579a56498b4ffd6e32cd1dcb4a7b24c2901e594 
 DIST lftp-4.0.4.tar.bz2 1605030 RMD160 9ce7ef4a55709df92ad8b9ecb6c4023ec91d43b8 SHA1 b47b38e041d1f8171ef49463885bf429b8973c46 SHA256 07ce35fb629340d425a14decd1b25950cd40dc0a9409279b00bad0ef2f96cc76
 DIST lftp-4.0.5.tar.bz2 1604028 RMD160 ab1a9d09f638dcb7c723c2f8df67afcdb73b2ba9 SHA1 02859b7729c6b1fe223a6f449f2b76ad555aef33 SHA256 5c1f94f5780ed3cb51fe00439fbfa4e8b4bd28564c3248cb21f6ee9fd794c473
 EBUILD lftp-3.7.15-r1.ebuild 1588 RMD160 521d611b155244b458fc61b6b7ede679d4241e10 SHA1 71bdba1012a6306b3115dd5e61da601ea4e12820 SHA256 6e66b545098ca5ce0d7f78c8f55220b846d582a8770eef09e295d0c422e03122
-EBUILD lftp-4.0.3.ebuild 1644 RMD160 5265ad1132f285f864994711efe8cf89cf9aa00f SHA1 77f7be4a88868cc58ecdee60bb18d470716b9cab SHA256 04327a1016aa4de2d56e07ce0941b57843c02567c8abe5be2428fb56d5237696
+EBUILD lftp-4.0.3.ebuild 1645 RMD160 e54724821e6029a78990d0d7039798a7e6fe9297 SHA1 4efe5928721be03d1c699b8f622e04306395e5ce SHA256 8ff38a05408d9de19e46f6eb7506f7404e4e37afeb67bde94d3bf038f02fcdce
 EBUILD lftp-4.0.4.ebuild 1655 RMD160 4f1eb3afa5645feb32546ce999721f19722fa52d SHA1 10aad46471f33be3f07cfdf8da3cb8ebfc1c1a33 SHA256 ee4a774a386fd717affdbd095c0585868f55bdc734ff72834218c188193839b4
 EBUILD lftp-4.0.5.ebuild 1655 RMD160 bc3b0ca39f832886e1a9b0f9653ff977077a612c SHA1 fc5b89fa9fe8f5739cccbc28e7b8cdb0a92b2458 SHA256 2e5b5352bbd6cfabe360fd8cdb71f818781f565c459036320709e5115413a595
-MISC ChangeLog 34270 RMD160 fea02d023f0dac1f9089209fcbb77940d02117e6 SHA1 35dbf556e2be0d3b664fb9e06b7fe04e5027669c SHA256 1fe7658ab2ca71a8d031b25a8dcd8f4cf57d6ac267f16826895de40fc360411e
+MISC ChangeLog 34380 RMD160 2cd0836a54af3626e9771425d7fa30d70d4ba7a2 SHA1 aa69df3f2d96ebab9aa6f192e68d3160d5d93b3e SHA256 bfa0abc54b1c62e26812373b828e87399f0ac1f555c0f823aaaf31aaae21cac3
 MISC metadata.xml 519 RMD160 6424fa2d245737f03d7c220ea73bc5896a404eac SHA1 c2aa31fe9bd860cae68e64a3df10082c23689fbe SHA256 439cf5422ec9039c0521f8d2b8e3baa229f14294ebbbfc9981354cd9c80496aa
